# mira_launcher

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc  APK_BUILD_README.md  DEBUG.md  README.md  TAURI_SETUP.md  apk.bat  apk.ps1  index.html  package.json  shrimp-rules.md  start-app.bat  start-app.ps1  start-dev.sh  tailwind.config.js  test-js-plugin-loading.js  test-plugin-loading.js  tsconfig.json  tsconfig.vue.json  vite.config.ts  vite.config.ts.timestamp-1755322689022-7708e364038b2.mjs
.github/prompts/: default.prompt.md
docs/: component-guide.md  plugin-development-guide.md  plugin-launch-event-handling.md  plugin-window-api.md  plugin-window-management.md  plugin-window-manager-refactor.md
example_plugins/demo/: INSTALL.md  README.md  config.json  index.ts  metadata.json  package.json  types.ts
plugins/: plugin-development-guide.md  plugin-sdk.ts
plugins/file-system-plugin/: index.js  index.ts  package.json  plugin.json
plugins/minimal-test-plugin/: index.d.ts  index.js
plugins/simple-test-plugin/: index.ts  plugin.json
plugins/simple-test-plugin-js/: index.d.ts  index.js
plugins/test-plugin/: index.ts  plugin.json
plugins/video-cut/: index.js  index.ts  plugin.json
plugins/web-link-plugin/: index.js  index.ts  package.json  plugin.json
plugins/window-test-plugin/: index.js  index.ts  package.json  plugin.json
public/: test-plugin-events.js
public/icons/: placeholder.md
public/plugins/: manifest.json
quick-search/: README-theme-system.md  app.js  communication-bridge.js  communication-test.html  component-integration.css  index.css  index.html  index.js  test-history-panel.html  test-result-list.html  test-search-input.html  test-theme-system.html  theme-manager.js  theme-system.css  vue-communication-adapter.js
quick-search/components/: HistoryPanel.css  HistoryPanel.js  ResultList.css  ResultList.js  SearchInput.css  SearchInput.js
quick-search/services/: CommunicationService.js  SearchService.js
quick-search/utils/: KeyboardManager.js
scripts/: compile-plugins.js
server/: README.md  index.js  package.json  plugins.json  start.sh
src/: App.vue  main-test.ts  main.ts  shims-vue.d.ts  vite-env.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: lib.rs  main.rs
src/components/: README.md  index.ts
src/composables/: index.ts  useApplicationLayout.ts  useDraggable.ts  useSearch.ts
src/config/: naive-theme.ts  primevue-theme.ts
src/plugins/: components.ts  performance.ts
src/router/: index.ts
src/stores/: addEntries.ts  app.ts  applications.ts  download.ts  grid-test.ts  grid.ts  page.ts  plugin.ts  settings.ts  theme.ts
src/styles/: main.css
src/types/: components.ts  plugin.ts  vue3-smooth-dnd.d.ts
src/utils/: search.ts  shortcut-system.ts  window-manager.ts
src/views/: About.vue  Applications.vue  Downloads.vue  Home.vue  NotFound.vue  PluginStore.vue  Plugins.vue  QuickSearchPage.vue  Settings.vue  (+1 more)
(+175 files in other folders)
