[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = ["dialog-ask", "dialog-confirm", "dialog-message", "dialog-open", "dialog-save", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-rename-file", "fs-write-file", "global-shortcut-all", "notification-all", "os-all", "path-all", "shell-execute", "shell-open", "shell-sidecar", "window-center", "window-close", "window-hide", "window-maximize", "window-minimize", "window-set-always-on-top", "window-set-decorations", "window-set-focus", "window-set-icon", "window-set-position", "window-set-size", "window-set-skip-taskbar", "window-set-title", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
